--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -93,3 +93,34 @@
     cursor: pointer;
     color: var(--hazel)
 }
+
+.task-list {
+    margin: 16px 0px 16px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0.75rem;
+}
+
+.task-item {
+    width: 680px;
+    height: 50px;
+    background-color: var(--hazel);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+}
+
+.task-item .task-title {
+    flex-grow: 1;
+}
+
+.task-item .icon-delete {
+    margin-left: 0px;
+}
