--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -13,3 +13,10 @@
     font-size: 20px;
     font-weight: 600;
 }
+
+.small {
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 500;
+}
