--- a/src/components/Setting/Setting.css
+++ b/src/components/Setting/Setting.css
@@ -5,11 +5,22 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 10px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px
+}
+
+.setting-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 75%;
 }
 
 .setting-container .body {
     display: flex;
     flex-direction: row;
+    gap: 10px;
 }
 
 .setting-mode {
@@ -47,4 +58,27 @@
 
 .setting-content {
     flex: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.theme-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px
+}
+
+.setting-content .image-container {
+    width: 150px;
+    height: 100px;
+    border-radius: 10px;
+    border: 1px solid #000;
+}
+
+.setting-content img {
+    max-width: 100%;
+    height: 100px;
+    border-radius: 10px;
 }
